# particle-system

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  author
include/: Application.h  CLContext.h  CLKernel.h  CLProgram.h  Camera.h  GLContext.h  GLObject.h  GLRenderer.h  GUIContext.h  ParticleSystem.h  Shader.h  Utils.h  application.h  bitmap_font.h  bounds.h  camera.h  collider.h  core.h  entity.h  framebuffer.h  input.h  mesh.h  obj_loader.h  renderer.h  shader.h  text.h  texture.h  textured_quad.h  wgl.h
res/kernel/: particles.cl  simple_add.cl
res/shaders/: basic.frag  basic.vert  billboard.vert  fb.frag  fb.vert  particle.frag  particle.vert  particle_emitter.frag  particle_emitter.vert  phong.frag  phong.vert  text.frag  text.vert  vertex_color.frag  vertex_color.vert
src/: Application.cpp  CLContext.cpp  CLKernel.cpp  CLProgram.cpp  Camera.cpp  GLContext.cpp  GLObject.cpp  GLRenderer.cpp  GUIContext.cpp  ParticleSystem.cpp  Shader.cpp  application.cpp  bitmap_font.cpp  camera.cpp  collider.cpp  entity.cpp  framebuffer.cpp  input.cpp  main.cpp  mesh.cpp  obj_loader.cpp  renderer.cpp  shader.cpp  texture.cpp  textured_quad.cpp
